--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,14 @@
-.App {
-  text-align: center;
+ .App {
+  display: flex;
+  justify-content: center;
+  /* align-content: center; */
+  font-family: 'Times New Roman', Times, serif;
+  background-color: aqua;
+  width: 100%;
+  height: 700px;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
