--- a/client/src/modules/form/Index.css
+++ b/client/src/modules/form/Index.css
@@ -2,4 +2,8 @@
     width: 400px;
     height: 600px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
