--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,9 @@
   justify-content: center;
   align-items: center;
   font-family: 'Kumbh Sans';
-  background-color: var(--disable);
+  /* background-color: var(--disable); */
   width: 100%;
   height: 100vh;
+  background-image: url("https://cdn.wallpapersafari.com/27/32/jt4AoG.jpg");
+  background-size: contain;
 }
