--- a/client/src/components/Buttons/Button.css
+++ b/client/src/components/Buttons/Button.css
@@ -1,7 +1,7 @@
 .signin-button{
-    margin-left: 85px;
-    width: 40%;
-    height: 70%;
+    /* margin-left: 85px; */
+    width: 100%;
+    height: 100%;
     background-color: var(--secondary);
     color: var(--primary);
     padding: 5px 20px 5px 20px;
