--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
   --primary: white;
   --secondary: #0466c8;
   --text: black;
-  --diable: #F1F2F3;
+  --disable: #F1F2F3;
 }
  
  .App {
@@ -15,5 +15,5 @@
   font-family: 'Kumbh Sans';
   background-color: aqua;
   width: 100%;
-  height: 700px;
+  height: 100vh;
 }
