--- a/client/src/modules/Dashboard/Dashboard.css
+++ b/client/src/modules/Dashboard/Dashboard.css
@@ -124,16 +124,17 @@
 .chat-page{
     width: 50vw;
     height: 100vh;
+    background-image: url(../../assets/bgtemp.jpg);
 }
 .chat-header{
-    height: 6rem;
+    height: 10%;
     background-color: var(--secondary);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .leftcontent{
-    height: 6rem;
+    height: 10%;
     background-color: var(--secondary);
     display: flex;
     justify-content: flex-start;
@@ -141,14 +142,14 @@
     padding-left: 50px;
 }
 .chat-pic{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
 }
 .chat-pic img{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 5px;
 }
 .chat-info{
@@ -163,7 +164,7 @@
     font-size: 1.25rem;
     font-family: 'kumbh-sans', sans-serif;
     font-weight: 600;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     color: var(--primary);
 }
 .chat-status{
@@ -173,20 +174,20 @@
     color: var(--primary);
 }
 .mail-forward{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     margin-right: 50px;
     cursor: pointer;
 }
 .mail-forward a{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     text-decoration: none;
     color: var(--primary);
 }
 .mail-forward a img{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
 }
 /* for chat messages */
 .chat-body{
@@ -194,7 +195,7 @@
     width: 50vw;
     overflow-y: scroll;
     scrollbar-width: thin;
-    background-image: url(../../assets/bgtemp.jpg);
+    background-color: transparent;
     display: flex;
     flex-direction: column;
 }
@@ -242,36 +243,50 @@
     height: 6vh;
     width: 50vw;
     padding: 10 0%;
-    background-color: var(--primary);
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.type-message input[type="text"]{
-    height: 80%;
-    width: 70%;
+.type-message .inputfeild{
+    width: 35vw;
+    height: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.type-message .input{
+    width: 35vw;
+    height: 4vh;
     border: none;
-    outline: none;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-size: 1rem;
     font-family: 'kumbh-sans', sans-serif;
     background-color: var(--disable);
-    padding-left: 20px;
+    color: var(--text);
+    margin: 0;
 }
-.type-message input[type="text"]::placeholder{
-    font-size: 1rem;
-    font-family: 'kumbh-sans', sans-serif;
-}
-.type-message input[type="submit"]{
-    display: flex;
-    height: 80%;
-    width: 10%;
-    background-color: var(--secondary);
-    color: var(--primary);
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    font-family: 'kumbh-sans', sans-serif;
+.sendmsg{
+    height: 4vh;
+    padding: 20px;
+    width: 4vh;
+    margin-left: 35px;
     cursor: pointer;
+    background-color: var(--secondary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 5px;
+}
+.sendmsg img{
+    height: 3vh;
+    width: 3vh;
 }
 /* for users you may connect with page */
 .third{
