--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,3 +1,5 @@
+
+/* input box */
 .sub-box{
     display: flex;
     flex-direction: column;
@@ -6,6 +8,7 @@
     font-size: 0.9rem;
 }
 
+/* Input field */
 .input{
     
     background-color: var(--disable);
