--- a/client/src/modules/form/Index.css
+++ b/client/src/modules/form/Index.css
@@ -1,3 +1,5 @@
+
+/* Main Container */
 .box{
     width: 500px;
     height: 600px;
@@ -10,6 +12,8 @@
     align-items: center;
 }
 
+
+/* Welcome box */
 .heading{
     font-family: Merienda;
     font-size: 2rem;
@@ -19,11 +23,14 @@
     font-size: 1rem;
 }
 
+/* Alternative page text */
 .signin-text{
     margin-top: 15px;
     font-size: 0.85rem;
 }
 
+
+/* Alternative option */
 .signin{
     color: var(--secondary);
     text-decoration: underline;
@@ -33,6 +40,8 @@
     cursor: pointer;
 }
 
+
+/* forgot-password */
 .password-text{
     margin-left: 175px;
     margin-bottom: 25px;
@@ -41,6 +50,7 @@
     text-decoration: underline;
 }
 
+/* SignIn/LogIn button */
 .box button{
     width: 50%;
     margin-left: 70px;
