--- a/client/src/modules/Dashboard/Dashboard.css
+++ b/client/src/modules/Dashboard/Dashboard.css
@@ -62,10 +62,10 @@
     /* overflow-y: scroll;
     scrollbar-width: thin; */
 }
-.heading h1{
+.convo_heading h1{
     margin-top: 30px;
     font-size: 1.25rem;
-    font-family: 'kumbh-sans', sans-serif;
+    font-family: 'kumbh-sans';
     margin-left: 30px;
     color: var(--secondary);
     font-weight: 500;
